# examples

./: pyproject.toml
.github/workflows/: main.yml
archive/project_name/: bot.py
dev/: DEV_README.md  dev.ipynb
dev/draft/try-airtable/: example_1_read.py  example_2_broken.py  example_3_semi_broken.py  example_4_pyairtable_3.0.py
dev/paused/aioscheduler_example/: main.py
dev/paused/bot_lib_scenarios/: new_handler.py
dev/paused/parse_time/: parse_with_calmlib.py  parse_with_pandas.py
dev/paused/send_telegram_message/: sample.env  send_tg_message.py
dev/unsorted/apscheduler_async_tgbot/: README.md  lib.py
dev/unsorted/apscheduler_raw_blocking/: aioschedule_example.py
dev/unsorted/query_langchain/: sample.env
dev/unsorted/query_openai/: query_openai.py  sample.env
dev/unsorted/split_audio/: dev.ipynb  split_audio.py  test_split_audio.py
dev/unsorted/video_to_audio/: dev.ipynb  video_to_audio.py
dev/wip/query_langchain/: query_langchain.py
dev/wip/use_database/: extra_setup.md  launch_local_db.md  reamde.md  sample_db_conn.ipynb
dev/wip/use_database_plugin/: bot.py
project_name/: bot.py  handler.py
src/code/: README.md
src/misc/: nested_plugin_getattr_setattr.py
tests/: test_imports.py
